# LI3_as_a_service

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml
assets/: police.txt
db/: Produtos.txt
src/: main.rs  parse.rs  server.rs  store.rs  util.rs  view.rs
src/store/: client.rs  product.rs  sale.rs
test_scripts/: test4.sh  test5.sh
