[package]
name = "li3-2019"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
lazy_static = "*"
rocket = "0.4"
chrono = "*"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "web"
path = "src/server.rs"

[profile.release]
codegen-units = 1
